# blog_mvc_fastapi

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: Dockerfile  docker-compose.yml  main.py  requirements.txt
backend/core/: config.py
