[tool.poetry]
name = "blog-mvc-fastapi"
version = "0.1.0"
description = ""
authors = ["Victor Siqueira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
pydantic = "^2.9.2"
black = "^24.10.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
